<resources>
    <string name="app_name">UserAuth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_welcome_message">Welcome to CoinRimp</string>
    <string name="password_message">Your must be more than 8 characters</string>
    <string name="login_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="signin_message">Welcome back to Amelia</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="Name">name</string>
    <string name="phone">Phone Number</string>
    <string name="user_profile">User Profile</string>
    <string name="already_have_account">Already haVe an Account?</string>
    <string name="reset_message">To reset your password enter the same email that was used during registration and a link would sent to that address for reseting your password</string>
    <string name="dont_have_account">Don\'t have an account?</string>

    <string name="password_reset_successful">Your password reset was successful, a link has been sent to email address you entered for password reset click on the button below to continue to login</string>

    <string name="password_reset_failure">Your password reset was not successful this might be due to poor or no internet connection, click on the button below to try again</string>

    <string name="reset_password_message">Enter the email address .that was used for registration a link for password will be sent to the inputed email address for password rest</string>
    <string name="welcome">Welcome Back</string>
</resources>