<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.auth.login.LoginFragment">



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_sp"
        android:layout_marginTop="@dimen/thirty_dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/hundred_twenty"
            android:layout_height="@dimen/hundred_twenty"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/app_logo"
            android:id="@+id/app_logo_image"/>




        <TextView
            android:id="@+id/create_account_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintTop_toBottomOf="@id/app_logo_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/ten_dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/eighteen_sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login to Access CoinRimp"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen_sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@id/create_account_message"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/five_dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/instruction_txt"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/option_2"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Enter Email"
            app:errorEnabled="false"
            android:layout_marginTop="@dimen/thirty_dp"
            app:layout_constraintBottom_toTopOf="@+id/option_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_txt">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:id="@+id/enter_email_ed"
                android:textSize="@dimen/fifteen_sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/option_3"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_2"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/enter_password_ed"
                android:textSize="@dimen/fifteen_sp"/>

            <TextView
                android:id="@+id/minimum_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_message"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/ten_sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginBottom="@dimen/ten_dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Forgot Password?"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option_3" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/fifteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="Login"
            android:backgroundTint="@color/purple_700"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password"/>

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/sixteen_sp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:layout_marginRight="@dimen/ten_dp"
            app:layout_constraintBottom_toBottomOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintTop_toTopOf="@+id/login_button" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registration_instruction_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/ten_dp"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintVertical_bias="0.152"
            android:layout_marginBottom="@dimen/twenty_dp">

            <TextView
                android:id="@+id/signup_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fifteen_sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/dont_have_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signup_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fifteen_sp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_up"
                android:layout_marginLeft="@dimen/five_dp"
                android:textColor="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/signup_instruction"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>