<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.auth.registration.RegistrationFragment">




<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_sp"
        android:layout_marginTop="@dimen/thirty_dp">

        <ProgressBar
            android:id="@+id/registration_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/hundred_twenty"
            android:layout_height="@dimen/hundred_twenty"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/app_logo"
            android:id="@+id/app_logo_image"/>




        <TextView
            android:id="@+id/create_account_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_welcome_message"
            app:layout_constraintTop_toBottomOf="@id/app_logo_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/eighteen_sp"/>

        <TextView
            android:id="@+id/instruction_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Register to get a secure Account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/twelve_sp"
            app:layout_constraintEnd_toEndOf="@+id/create_account_message"
            app:layout_constraintStart_toStartOf="@+id/create_account_message"
            app:layout_constraintTop_toBottomOf="@id/create_account_message" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/twenty_dp"
            android:id="@+id/first_name"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="First name"
            app:errorEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_txt">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:id="@+id/app_enter_first_name_ed"
                android:textSize="@dimen/fifteen_sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Last name"
            app:errorEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:id="@+id/app_enter_last_name_ed"
                android:textSize="@dimen/fifteen_sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/answer"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Username"
            app:errorEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/option_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:id="@+id/app_enter_user_name_ed"
                android:textSize="@dimen/fifteen_sp" />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/option_1"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Enter Email"
            app:errorEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/option_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:id="@+id/app_email_ed"
                android:textSize="@dimen/fifteen_sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/option_3"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_1"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/app_enter_password_ed"
                android:textSize="@dimen/fifteen_sp"/>

            <TextView
                android:id="@+id/minimum_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_message"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/twelve_sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginBottom="@dimen/ten_dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/create_account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/fifteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="Create account"
            android:backgroundTint="@color/purple_700"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option_3"/>

        <ProgressBar
            android:id="@+id/account_creation_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/sixteen_sp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/create_account_button"
            app:layout_constraintEnd_toEndOf="@+id/create_account_button"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="@+id/create_account_button"
            app:layout_constraintTop_toTopOf="@+id/create_account_button" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registration_instruction_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/ten_dp"
            app:layout_constraintTop_toBottomOf="@id/create_account_button"
            app:layout_constraintVertical_bias="0.152"
            android:layout_marginBottom="@dimen/twenty_dp">

            <TextView
                android:id="@+id/signup_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fifteen_sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/already_have_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signup_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fifteen_sp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_in"
                android:layout_marginLeft="@dimen/five_dp"
                android:textColor="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/signup_instruction"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <ProgressBar
            android:id="@+id/app_registration_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminateTint="@color/purple_700"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>